adicionadas novas imagems svgs, adicionados links para os repositorios e atualizado o readme (adicionado link para a aplicacao hospedada na minha maquina)

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                                     <h3 class="title"><a href="#" target="_blank">Sistema completo em PHP</a></h3>
                                     <p class="mb-2"></p>
                                     <p class="row">
-                                        <a class="more-link col-5 text-center" href="" target="_blank"><i class="fas fa-code"></i>Código</a>
+                                        <a class="more-link col-5 text-center" href="https://github.com/jeferson0993/SISTEMA-COMPLETO-EM-PHP.git" target="_blank"><i class="fas fa-code"></i>Código</a>
                                         <a class="more-link col-7 text-center" href="" target="_blank"><i class="fas fa-globe-americas"></i>Demonstração</a>
                                     </p>
                                 </div>
@@ -152,7 +152,7 @@
                                     <h3 class="title"><a href="" target="_blank">Sistema de Cadastro e Login em PHP</a></h3>
                                     <p class="mb-2"></p>
                                     <p class="row">
-                                        <a class="more-link col-5 text-center" href="" target="_blank"><i class="fas fa-code"></i>Código</a>
+                                        <a class="more-link col-5 text-center" href="https://github.com/jeferson0993/Sistema-de-Cadastro-e-Login-com-PHP-MySQL.git" target="_blank"><i class="fas fa-code"></i>Código</a>
                                         <a class="more-link col-7 text-center" href="" target="_blank"><i class="fas fa-globe-americas"></i>Demonstração</a>
                                     </p>
                                 </div>
@@ -165,14 +165,14 @@
                             <hr class="divider" />
                             <div class="item row">
                                 <a class="col-md-4 col-12" href="#" target="_blank">
-                                    <img class="img-fluid project-image" src="assets/images/projects/undraw_cloud_sync_2aph.svg" alt="nome do projeto" />
+                                    <img class="img-fluid project-image" src="assets/images/projects/undraw_to_do_list_a49b.svg" alt="nome do projeto" />
                                 </a>
                                 <div class="desc col-md-8 col-12">
                                     <h3 class="title"><a href="#" target="_blank">JavaScript Todo List com localStorage</a></h3>
                                     <p class="mb-2"></p>
                                     <p class="row">
-                                        <a class="more-link col-5 text-center" href="" target="_blank"><i class="fas fa-code"></i>Código</a>
-                                        <a class="more-link col-7 text-center" href="" target="_blank"><i class="fas fa-globe-americas"></i>Demonstração</a>
+                                        <a class="more-link col-5 text-center" href="https://github.com/jeferson0993/JavaScript-todoList-com-localStorage.git" target="_blank"><i class="fas fa-code"></i>Código</a>
+                                        <a class="more-link col-7 text-center" href="/todolist" target="_blank"><i class="fas fa-globe-americas"></i>Demonstração</a>
                                     </p>
                                 </div>
                                 <!--//desc-->
@@ -181,15 +181,15 @@
                             <hr class="divider" />
                             <div class="item row">
                                 <div class="desc col-md-8 col-12">
-                                    <h3 class="title"><a href="" target="_blank">Sistema de Cadastro e Login em PHP</a></h3>
+                                    <h3 class="title"><a href="" target="_blank">Calculadora em javascript</a></h3>
                                     <p class="mb-2"></p>
                                     <p class="row">
-                                        <a class="more-link col-5 text-center" href="" target="_blank"><i class="fas fa-code"></i>Código</a>
-                                        <a class="more-link col-7 text-center" href="" target="_blank"><i class="fas fa-globe-americas"></i>Demonstração</a>
+                                        <a class="more-link col-5 text-center" href="https://github.com/jeferson0993/Calculadora.git" target="_blank"><i class="fas fa-code"></i>Código</a>
+                                        <a class="more-link col-7 text-center" href="/calculadora" target="_blank"><i class="fas fa-globe-americas"></i>Demonstração</a>
                                     </p>
                                 </div>
                                 <a class="col-md-4 col-12" href="#" target="_blank">
-                                    <img class="img-fluid project-image" src="assets/images/projects/undraw_responsive_6c8s.svg" alt="nome do projeto" />
+                                    <img class="img-fluid project-image" src="assets/images/projects/undraw_Calculator_0evy.svg" alt="nome do projeto" />
                                 </a>
                                 <!--//desc-->
                             </div>
