add internationalization with vanilla javascipt

--- a/index.html
+++ b/index.html
@@ -42,19 +42,24 @@
             <div class="profile-content float-left">
                 <h1 class="name">Jeferson Ferreira</h1>
                 <h2 class="desc">Web Developer</h2>
-                <ul class="social list-inline">
+                <ul class="social list-inline langWrap">
                     <li class="list-inline-item"><a href="https://www.linkedin.com/in/jeferson-ferreira-4a036b143"><i
                                 class="fab fa-linkedin-in"></i></a></li>
                     <li class="list-inline-item"><a href="https://github.com/jeferson0993"><i
                                 class="fab fa-github"></i></a></li>
-                    <li class="list-inline-item last-item"><a href="https://codepen.io/jeferson0993"><i
+                    <li class="list-inline-item"><a href="https://codepen.io/jeferson0993"><i
                                 class="fab fa-codepen"></i></a></li>
                     <li class="list-inline-item"><a href="https://stackexchange.com/users/16185650/jeferson-ferreira"><i
                                 class="fab fa-stack-overflow"></i></a></li>
+                    <li class="list-inline-item"><a href="#" language='portuguese' class="active">
+                            <img src="./assets/images/icons/brasil.svg" alt="" srcset=""></a></li> 
+                    <li class="list-inline-item"><a href="#" language='english'>
+                        <img src="./assets/images/icons/estados-unidos.svg" alt="" srcset=""></a></li> 
+                    <li class="list-inline-item last-item"><a href="#" language='chinese'>
+                        <img src="./assets/images/icons/china.svg" alt="" srcset=""></a></li> 
                 </ul>
             </div>
             <!--//profile-->
-            <!-- a class="btn btn-cta-primary float-right" href="#"><i class="fas fa-paper-plane"></i> Entre em contato</a -->
         </div>
         <!--//container-->
     </header>
@@ -65,8 +70,8 @@
             <div class="primary col-lg-8 col-12">
                 <section class="about section">
                     <div class="section-inner">
-                        <h2 class="heading">Sobre Mim</h2>
-                        <div class="content">
+                        <h2 class="heading about-me-title">Sobre Mim</h2>
+                        <div class="content about-me-description">
                             <p>Estudante Universitário, sistemas para internet, usuário de linux e autodidata.</p>
                         </div>
                         <!--//content-->
@@ -77,12 +82,12 @@
 
                 <section class="latest section">
                     <div class="section-inner">
-                        <h2 class="heading">Projeto em destaque</h2>
+                        <h2 class="heading featured-project">Projeto em destaque</h2>
                         <div class="content">
 
                             <div class="item featured text-center">
-                                <h3 class="title"><a href="https://jf-automacao-residencial.web.app" target="_blank">JF Automação Residencial</a></h3>
-                                <p class="summary">Meu sistema de monitoramento e controle de "coisas" pela internet.
+                                <h3 class="title featured-project-title"><a href="https://jf-automacao-residencial.web.app" target="_blank">JF Automação Residencial</a></h3>
+                                <p class="summary featured-project-subtitle">Meu sistema de monitoramento e controle de "coisas" pela internet.
                                 </p>
                                 <div class="featured-image has-ribbon">
                                     <a href="https://jf-automacao-residencial.web.app" target="_blank">
@@ -90,18 +95,18 @@
                                             alt="project name" />
                                     </a>
                                     <div class="ribbon">
-                                        <div class="text">Confira!</div>
+                                        <div class="text featured-project-up-flag">Confira!</div>
                                     </div>
                                 </div>
 
-                                <div class="desc text-left">
+                                <div class="desc text-left featured-project-description">
                                     <p>Com o app é possível acionar
                                         remotamente lâmpadas, máquinas, aparelhos de ar condicionado entre outros. Tudo
                                         pelo seu PC ou pelo seu celular.</p>
                                 </div>
                                 <!--//desc-->
-                                <a class="btn btn-cta-secondary" href="https://jf-automacao-residencial.web.app" target="_blank"><i
-                                        class="fas fa-external-link-alt"></i> Site do projeto</a>
+                                <a class="btn btn-cta-secondary featured-project-button" href="https://jf-automacao-residencial.web.app" target="_blank"><i
+                                        class="fas fa-external-link-alt"></i> Página do projeto</a>
                             </div>
                             <!--//item-->
                             <hr class="divider" />
@@ -111,10 +116,10 @@
                                         src="assets/images/projects/simemap.png" alt="nome do projeto" />
                                 </a>
                                 <div class="desc col-md-8 col-12">
-                                    <h3 class="title"><a href="http://www.simemap.com"
+                                    <h3 class="title p1-title"><a href="http://www.simemap.com"
                                             target="_blank">Sistema de monitoramento eletrônico</a>
                                     </h3>
-                                    <p class="mb-2">Com o Simemap é possível acompanhar de perto e com qualidade o consumo de energia
+                                    <p class="mb-2 p1-desc">Com o Simemap é possível acompanhar de perto e com qualidade o consumo de energia
                                         elétrica de qualquer equipamento de uma casa, seja apenas alguns circuitos (seu
                                         quarto ou cozinha por exemplo) ou sua casa como um todo.
                                         É possível também, com poucos ajustes, medir outras coisas, como o consumo de
@@ -123,7 +128,7 @@
                                         remotamente lâmpadas, máquinas, aparelhos de ar condicionado entre outros. Tudo
                                         pelo seu PC ou pelo seu celular.</p>
                                     <p class="row">
-                                        <a class="more-link col-7 text-center"
+                                        <a class="more-link col-7 text-center p1-link"
                                             href="http://www.simemap.com" target="_blank"><i
                                                 class="fas fa-globe-americas"></i>Demonstração</a>
                                     </p>
@@ -134,9 +139,9 @@
                             <hr class="divider" />
                             <div class="item row">
                                 <div class="desc col-md-8 col-12">
-                                    <h3 class="title"><a href="https://jeferson0993.github.io/AngularWorkShop/"
+                                    <h3 class="title p2-title"><a href="https://jeferson0993.github.io/AngularWorkShop/"
                                             target="_blank">Sistema de Controle de vagas de trabalho</a></h3>
-                                    <p class="mb-2">Uma aplicação WEB usando ANGULAR, na arquitetura MVC para complementar apresentação para a disciplina de Novas Tecnologias em Desenvolvimento Web, ministrada pelo professor Marinaldo Oliveira Santos, do curso Tecnólogo em Sistemas para Internet.</p>
+                                    <p class="mb-2 p2-desc">Uma aplicação WEB usando ANGULAR, na arquitetura MVC para complementar apresentação para a disciplina de Novas Tecnologias em Desenvolvimento Web, ministrada pelo professor Marinaldo Oliveira Santos, do curso Tecnólogo em Sistemas para Internet.</p>
                                     <p class="row">
                                         <a class="more-link col-4 text-center"
                                             href="https://docs.google.com/presentation/d/15bTwvqteQ2HCoy-QwlXMnZAsH7wkhAkLAbt8hTpXC4k/present?token=AC4w5VjYhYcaJgNPDl0Q_en_Oqtl2jJzIA%3A1566946326671&includes_info_params=1&eisi=CJ6QvPmRpOQCFRSXHwodzA0HlQ#slide=id.p" target="_blank"><i
@@ -144,7 +149,7 @@
                                         <a class="more-link col-4 text-center"
                                             href="https://github.com/jeferson0993/AngularWorkShop" target="_blank"><i
                                                 class="fas fa-code"></i>Código</a>
-                                        <a class="more-link col-4 text-center"
+                                        <a class="more-link col-4 text-center p2-link"
                                             href="https://jeferson0993.github.io/AngularWorkShop/" target="_blank"><i
                                                 class="fas fa-globe-americas"></i>Demonstração</a>
                                     </p>
@@ -163,15 +168,15 @@
                                         src="https://miro.medium.com/max/1200/0*T6pKJjgoPIBy_u-_.png" alt="CRUD com Svelte3 e Firebase" />
                                 </a>
                                 <div class="desc col-md-8 col-12">
-                                    <h3 class="title"><a href="https://crud-svelte-firebase.now.sh/"
+                                    <h3 class="title p3-title"><a href="https://crud-svelte-firebase.now.sh/"
                                             target="_blank">CRUD com Svelte3 e Firebase</a>
                                     </h3>
-                                    <p class="mb-2">Um aplicativo CRUD de demonstração para um sistema de gerenciamento de registros de estudantes, construído com <b>Svelte3</b> e o banco de dados NoSQL em nuvem Firebase Real-time.</p>
+                                    <p class="mb-2 p3-desc">Um aplicativo CRUD de demonstração para um sistema de gerenciamento de registros de estudantes, construído com <b>Svelte3</b> e o banco de dados NoSQL em nuvem Firebase Real-time.</p>
                                     <p class="row">
                                         <a class="more-link col-5 text-center"
                                             href="https://github.com/jeferson0993/crud-svelte-firebase"
                                             target="_blank"><i class="fas fa-code"></i>Código</a>
-                                        <a class="more-link col-7 text-center"
+                                        <a class="more-link col-7 text-center p3-link"
                                             href="https://crud-svelte-firebase.now.sh/" target="_blank"><i
                                                 class="fas fa-globe-americas"></i>Demonstração</a>
                                     </p>
@@ -182,14 +187,14 @@
                             <hr class="divider" />
                             <div class="item row">
                                 <div class="desc col-md-8 col-12">
-                                    <h3 class="title"><a href="https://jeferson0993.github.io/crud-angular8-firebase/" target="_blank">CRUD com Angular8 e Firebase RealTime Database</a>
+                                    <h3 class="title p4-title"><a href="https://jeferson0993.github.io/crud-angular8-firebase/" target="_blank">CRUD com Angular8 e Firebase RealTime Database</a>
                                     </h3>
-                                    <p class="mb-2">Um aplicativo CRUD de demonstração para um sistema de gerenciamento de registros de estudantes, construído com <b>Angular 8</b> e o banco de dados NoSQL em nuvem Firebase Real-time.</p>
+                                    <p class="mb-2 p4-desc">Um aplicativo CRUD de demonstração para um sistema de gerenciamento de registros de estudantes, construído com <b>Angular 8</b> e o banco de dados NoSQL em nuvem Firebase Real-time.</p>
                                     <p class="row">
                                         <a class="more-link col-5 text-center"
                                             href="https://github.com/jeferson0993/crud-angular8-firebase"
                                             target="_blank"><i class="fas fa-code"></i>Código</a>
-                                        <a class="more-link col-7 text-center" href="https://jeferson0993.github.io/crud-angular8-firebase/" target="_blank"><i
+                                        <a class="more-link col-7 text-center p4-link" href="https://jeferson0993.github.io/crud-angular8-firebase/" target="_blank"><i
                                                 class="fas fa-globe-americas"></i>Demonstração</a>
                                     </p>
                                 </div>
@@ -567,6 +572,7 @@
     <script type="text/javascript" src="assets/plugins/github-activity/github-activity-0.1.5.min.js"></script>
     <!-- custom js -->
     <script type="text/javascript" src="assets/js/main.js"></script>
+    <script type="text/javascript" src="assets/js/i18n.js"></script>
 </body>
 
 </html>
