--- a/index.html
+++ b/index.html
@@ -414,8 +414,8 @@
                                         class="sr-only">Localização:</span>Palmas, TO - Brasil</li>
                                 <li><i class="fas fa-envelope"></i><a
                                         href="mailto: jeferson0993@gmail.com">jeferson0993@gmail.com</a></li>
-                                <li><i class="fas fa-link"></i><a href="https://jeferson0993.000webhostapp.com/"
-                                        target="_blank">www.Jeferson.ml</a></li>
+                                <li><i class="fas fa-link"></i><a href="www.Jeferson.gq"
+                                        target="_blank">www.Jeferson.gq</a></li>
                             </ul>
                         </div>
                         <!--//content-->
@@ -510,7 +510,7 @@
                             <ul class="list-unstyled">
                                 <li class="item">
                                     <span class="title"><strong>Inglês:</strong></span>
-                                    <span class="level">Nivel auto-suficiente <br class="visible-xs" /><i
+                                    <span class="level">Nivel universitário: <strong> W8 - Wizard</strong><br class="visible-xs" /><i
                                             class="fas fa-star"></i> <i class="fas fa-star"></i> <i
                                             class="fas fa-star"></i> <i class="fas fa-star"></i> <i
                                             class="fas fa-star"></i> </span>
